fix navbar-bookmark overlap

--- a/global.css
+++ b/global.css
@@ -55,6 +55,7 @@ h1 {
   position: fixed;
   bottom: 0;
   height: 60px;
+  z-index: 2;
 }
 
 a {
